--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,51 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+### IntelliJ IDEA ###
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+#Exclude IDE Specific files
+*.iml
+.idea
+.project
+.settings
+.classpath
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.next
+pom.xml.releaseBackup
+pom.xml.versionBackup
+buildnumber.properties
+release.properties
+dependency-reduced-pom.xml
+.mvn/timing.properties
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
